Bug 252771. Recompute an inline frame's overflow area nearly from scratch in RelativePositionFrames, so we don't try to maintain it (and fail) during inline frame alignment. r+sr=dbaron